<resources>
    <string name="app_name">TaskMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_your_password"><b>Forgot your password ?</b></string>
    <string name="login">Sign In</string>
    <string name="slogan">Your problem our problem</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="tasks_completed">Tasks completed</string>
    <string name="offers">Offers</string>
    <string name="messages">Messages</string>
    <string name="find_work">Find Work</string>

    <string name="action_add_favourite">Place bid</string>
    <string name="action_play_next">Remove from saved</string>
    <string name="backdrop_title">TASKS SAVED</string>
    <string name="backdrop_subtitle">You have 20 saved tasks</string>
</resources>
