<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_menu_work"
            android:title="@string/find_work" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_offers"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/tasks_completed" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>
</menu>