<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="38sp"
                android:textColor="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_input_layout">
                <EditText
                    android:id="@+id/txtLogEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass_input_layout">
                <EditText
                    android:id="@+id/txtLogPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/signin"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/signupbtn"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSignUp"
                android:layout_alignParentStart="true"
                android:text="@string/don_t_have_an_account"
                android:textStyle="italic"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:text="@string/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textView" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>